@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-28T01:09:04Z",
+  "timestamp" : "2022-11-28T08:18:47Z",
   "count_outdated" : 676,
   "uniques_outdated" : 382,
-  "count" : 716,
+  "count" : 715,
   "uniques" : 402,
   "clones" : [
     {
       "timestamp": "2022-11-14T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
