@@ -1,10 +1,10 @@
 {
-  "count": 40,
+  "count": 39,
   "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-11-14T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
