@@ -1,3 +1,11 @@
+2022-11-28T08:18:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3562940487 # 1069
+* notice: last 14d: unq all: 8 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 382 676 / 402 716
+* notice: next accum: outdated-unq outdated-all / unq all: 382 676 / 402 715
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-11-14]
+
 2022-11-28T01:09:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3560836287 # 1068
 * notice: last 14d: unq all: 8 40
